# lua-https

./: .gitignore  Android.mk  CMakeLists.txt  license.txt  readme.md
.github/workflows/: build.yml
example/: example.lua  test.lua
src/: CMakeLists.txt
src/android/: AndroidClient.cpp  AndroidClient.h
src/android/java/org/love2d/luahttps/: LuaHTTPS.java
src/android/ndk-build/common/: config.h
src/apple/: NSURLClient.mm
src/common/: HTTPRequest.cpp  HTTPS.cpp  HTTPSClient.cpp  LibraryLoader.cpp  PlaintextConnection.cpp  config-generated.h.in  config.h  config.h.in
src/generic/: CurlClient.cpp  CurlClient.h  OpenSSLConnection.cpp  OpenSSLConnection.h
src/lua/: main.cpp
src/macos/: NSURLClient.h  NSURLClient.mm
src/windows/: SChannelConnection.cpp  SChannelConnection.h  WinINetClient.cpp  WinINetClient.h  WindowsLibraryLoader.cpp
